--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "react-router-dom": "^6.26.2",
     "terser": "^5.33.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
