--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-react": "^4.3.1",
     "abortcontroller-polyfill": "^1.7.5",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "postcss": "^8.4.47",
     "react-router-dom": "^6.26.2",
+    "tailwindcss": "^3.4.13",
     "terser": "^5.33.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
