--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss": "^8.4.47",
     "react-router-dom": "^6.26.2",
     "storybook": "^8.3.5",
+    "tailwind-merge": "^2.5.3",
     "tailwindcss": "^3.4.13",
     "terser": "^5.33.0",
     "typescript": "^5.5.3",
