--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "eslint-plugin-storybook": "^0.9.0",
+    "events": "^3.3.0",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "react-router-dom": "^6.26.2",
