feat: First pass on making Pokemon navigationable

--- a/apps/neko-terebi-app/package.json
+++ b/apps/neko-terebi-app/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "main": "./main.tsx",
   "dependencies": {
-    "@hrgui/neko-terebi-error-page": "*"
+    "@hrgui/neko-terebi-error-page": "*",
+    "@noriginmedia/norigin-spatial-navigation": "^2.2.1"
   }
 }
