fix: fix build and deploy not deployin

--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -4,6 +4,8 @@ on:
   push:
     paths:
       - "src/**"
+      - "packages/**"
+      - "apps/**"
       - "public/**"
       - ".github/workflows/**"
       - "package.json"
