--- a/packages/PokemonSingleLoader/package.json
+++ b/packages/PokemonSingleLoader/package.json
@@ -3,5 +3,8 @@
   "version": "0.0.0",
   "type": "module",
   "main": "./pokemonLoader.ts",
-  "dependencies": {}
+  "peerDependencies": {
+    "@hrgui/neko-terebi-api-eda-client": "*",
+    "@tanstack/react-query": "^5.56.2"
+  }
 }
