--- a/packages/QueryClient/package.json
+++ b/packages/QueryClient/package.json
@@ -3,5 +3,7 @@
   "version": "0.0.0",
   "type": "module",
   "main": "./queryClient.ts",
-  "dependencies": {}
+  "peerDependencies": {
+    "@tanstack/react-query": "^5.56.2"
+  }
 }
