--- a/packages/AppRoot/package.json
+++ b/packages/AppRoot/package.json
@@ -3,5 +3,9 @@
   "version": "0.0.0",
   "type": "module",
   "main": "./AppRoot.tsx",
-  "dependencies": {}
+  "peerDependencies": {
+    "@hrgui/neko-terebi-react-component-loading": "*",
+    "@hrgui/neko-terebi-react-component-app-layout": "*",
+    "@noriginmedia/norigin-spatial-navigation": "*"
+  }
 }
