feat: switch to @please/lrud

--- a/packages/components/FocusableLink/package.json
+++ b/packages/components/FocusableLink/package.json
@@ -5,7 +5,6 @@
   "main": "./FocusableLink.tsx",
   "peerDependencies": {
     "react-router-dom": "*",
-    "tailwind-merge": "*",
-    "@noriginmedia/norigin-spatial-navigation": "*"
+    "tailwind-merge": "*"
   }
 }
