feat: add the Grid story into Storybook

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-router-dom": "^6.26.2",
     "scroll-polyfill": "^1.0.1",
     "storybook": "^8.3.6",
+    "storybook-addon-remix-react-router": "^3.0.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss": "^3.4.13",
     "terser": "^5.33.0",
