feat: add the spatial-navigation package here for now

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "packages/components/*",
     "packages/pages/*",
     "packages/queries/*",
-    "packages/router/*"
+    "packages/router/*",
+    "packages/spatial-navigation/*"
   ],
   "scripts": {
     "start": "vite",
