--- a/packages/components/Loading/package.json
+++ b/packages/components/Loading/package.json
@@ -2,6 +2,5 @@
   "name": "@hrgui/neko-terebi-react-component-loading",
   "version": "0.0.0",
   "type": "module",
-  "main": "./LoadingOverlay.tsx",
-  "dependencies": {}
+  "main": "./LoadingOverlay.tsx"
 }
