--- a/packages/components/MainContainer/package.json
+++ b/packages/components/MainContainer/package.json
@@ -2,6 +2,5 @@
   "name": "@hrgui/neko-terebi-react-component-main-container",
   "version": "0.0.0",
   "type": "module",
-  "main": "./MainContainer.tsx",
-  "dependencies": {}
+  "main": "./MainContainer.tsx"
 }
