refactor: Add function getChildVisibilityInParent and leverage it

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "packages/pages/*",
     "packages/queries/*",
     "packages/router/*",
+    "packages/utils/*",
     "packages/spatial-navigation/*"
   ],
   "scripts": {
