feat: update to tanstack-router

--- a/packages/components/AppProvider/package.json
+++ b/packages/components/AppProvider/package.json
@@ -5,7 +5,6 @@
   "main": "./AppProvider.tsx",
   "peerDependencies": {
     "@hrgui/neko-terebi-query-client": "*",
-    "@tanstack/react-query": "*",
-    "react-router-dom": "*"
+    "@tanstack/react-query": "*"
   }
 }
