--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@storybook/react-vite": "^8.3.6",
     "@storybook/test": "^8.3.6",
     "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-router": "^1.82.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
     "@types/react": "^18.3.3",
@@ -56,7 +57,6 @@
     "globals": "^15.9.0",
     "jsdom": "^25.0.1",
     "postcss": "^8.4.47",
-    "react-router-dom": "^6.26.2",
     "scroll-polyfill": "^1.0.1",
     "storybook": "^8.3.6",
     "storybook-addon-remix-react-router": "^3.0.1",
