--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@storybook/test": "^8.3.6",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-router": "^1.82.2",
+    "@tanstack/react-virtual": "^3.10.9",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
     "@types/react": "^18.3.3",
