--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -25,15 +25,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: ⎔ Setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
+        uses: oven-sh/setup-bun@v2
 
-      - name: 📥 Download deps
-        uses: bahmutov/npm-install@v1
+      - name: Install
+        run: bun install
 
       - name: ⚙️ Build
-        run: npm run build && npm run build-storybook
+        run: bun run build && bun run build-storybook
 
       - name: ⚙️ Prepare
         run: mkdir -p ./dist/storybook && mv ./storybook-static/* ./dist/storybook
