--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "postcss-var-replace": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
