fix: actually install event-target-polyfill

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "eslint-plugin-storybook": "^0.9.0",
+    "event-target-polyfill": "^0.0.4",
     "events": "^3.3.0",
     "globals": "^15.9.0",
     "jsdom": "^25.0.1",
